<?xml version="1.0"?>
<package>
  <name>robot_car_description</name>
  <version>0.0.0</version>
  <description>The robot_car_description package</description>

  <maintainer email="robotksww@gmail.com">KSWW</maintainer>

  <license>GPLv3</license>

  <author email="robotksww@gmail.com">KSWW</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <export>
  </export>
</package>
